# tea

./: .gitignore  README.md  config.local.yml  config.mainnet.yml  config.testnet.yml  config.yml  default.nix  install.sh  inventory.ini  pyproject.toml  tea_down.yml  tea_start.yml  tea_stop.yml  tea_up.yml
playbooks/: start_elastic.yml  start_kibana.yml  start_leap.yml  start_redis.yml  start_reth.yml  start_rpc.yml  start_tcc.yml  start_translator.yml
playbooks/start/: elastic.yml  leap.yml  redis.yml  rpc.yml  translator.yml
src/tea/: cleos_evm.py  testing.py  utils.py
templates/es/: Dockerfile  elasticsearch.yml.j2
templates/kibana/: kibana.yml.j2
templates/leap/: Dockerfile  config.ini.j2
templates/leap/genesis/: local.json  mainnet.json  testnet.json
templates/redis/: redis.conf.j2
templates/reth/: Dockerfile  entrypoint.sh  env.j2
templates/rpc/: Dockerfile  config.json.j2
templates/tcc/: Dockerfile  config.toml.j2  entrypoint.sh
templates/translator/: Dockerfile  config.json.j2
